--- a/src/pages/project.html
+++ b/src/pages/project.html
@@ -285,35 +285,29 @@
         <section class="project-gallery">
             <div class="project-gallery__container">
                 <div class="project-gallery__container-animation">
-                    <!--
-                    <div class="project-gallery__content">
+                    <div class="project-gallery__planning mb-8">
                         <div class="project-gallery__img white-header scale-into-view">
-                            <div class="project-gallery__img-animation plan">
-                                <img src="../assets/images/plan.png" alt="">
-                            </div>
+                            <img src="../assets/images/plan.png" alt="">
                         </div>
-                        <div class="project-gallery__planning">
-                            <div class="project-gallery__title">
-                                <div class="slide-down-in-view__container">
-                                    <div class="slide-down-in-view duration-1">
-                                        Планировка,<br>
-                                        которой мы<br>
-                                        городимся
-                                    </div>
+                        <div class="project-gallery__title">
+                            <div class="slide-down-in-view__container">
+                                <div class="slide-down-in-view duration-1">
+                                    Планировка,<br>
+                                    которой мы<br>
+                                    городимся
                                 </div>
                             </div>
-                            <div class="project-gallery__text">
-                                <div class="slide-up-in-view__container">
-                                    <div class="slide-up-in-view150 duration-1">
-                                        Создана с учетом комфорта и функциональности, продуманная до мельчайших деталей.
-                                        Пространство организовано так, чтобы каждый уголок дома стал местом уюта и вдохновения,
-                                        подчеркивая уникальный стиль и продуманность каждой зоны
-                                    </div>
+                        </div>
+                        <div class="project-gallery__text">
+                            <div class="slide-up-in-view__container">
+                                <div class="slide-up-in-view150 duration-1">
+                                    Создана с учетом комфорта и функциональности, продуманная до мельчайших деталей.
+                                    Пространство организовано так, чтобы каждый уголок дома стал местом уюта и вдохновения,
+                                    подчеркивая уникальный стиль и продуманность каждой зоны
                                 </div>
                             </div>
                         </div>
                     </div>
-                    -->
                     <div class="project-gallery__content">
                         <div class="project-gallery__img white-header scale-into-view">
                             <div class="project-gallery__img-animation">
@@ -326,12 +320,22 @@
                             </div>
                         </div>
                     </div>
+                    <div class="project-gallery__text-center scale-into-view">
+                        Данный проект - один из немногих, где зонирование практически незаметно, так как зона кухни выполнена в том же стиле и в тех
+                        же оттенках, что и зона отдыха
+                    </div>
                     <div class="project-gallery__content">
                         <div class="project-gallery__img-big white-header scale-into-view">
                             <div class="project-gallery__img-animation">
                                 <img src="../assets/images/gallery3.png" alt="">
                             </div>
                         </div>
+                    </div>
+                    <div class="project-gallery__text-left scale-into-view">
+                        Уюта в это царство натурального камня вносят акценты из дерева и камин, а Пространство не кажется пустым благодаря аксессуарам и массивной авторской мебели
+                    </div>
+                    <div class="project-gallery__text-left pt-0 scale-into-view">
+                        Ненавязчивые системы освещения, встроенная техника, скрытые межкомнатные двери. Нет ничего, что могло бы перегружать пространство.
                     </div>
                     <div class="project-gallery__content">
                         <div class="project-gallery__img white-header scale-into-view">
@@ -345,12 +349,22 @@
                             </div>
                         </div>
                     </div>
+                    <div class="project-gallery__text-center scale-into-view">
+                        Данный проект - один из немногих, где зонирование практически незаметно, так как зона кухни выполнена в том же стиле и в тех
+                        же оттенках, что и зона отдыха
+                    </div>
                     <div class="project-gallery__content">
                         <div class="project-gallery__img-big white-header scale-into-view">
                             <div class="project-gallery__img-animation">
                                 <img src="../assets/images/gallery6.png" alt="">
                             </div>
                         </div>
+                    </div>
+                    <div class="project-gallery__text-left scale-into-view">
+                        Уюта в это царство натурального камня вносят акценты из дерева и камин, а Пространство не кажется пустым благодаря аксессуарам и массивной авторской мебели
+                    </div>
+                    <div class="project-gallery__text-left pt-0 scale-into-view">
+                        Ненавязчивые системы освещения, встроенная техника, скрытые межкомнатные двери. Нет ничего, что могло бы перегружать пространство.
                     </div>
                     <div class="project-gallery__content">
                         <div class="project-gallery__img white-header scale-into-view">
