--- a/src/pages/main.html
+++ b/src/pages/main.html
@@ -93,6 +93,52 @@
      </div>
 
      <div id="container">
+         <div class="modal-wrapper">
+             <div id="feedback-modal" class="modal-box">
+                 <div class="modal-content">
+                     <div class="modal-content__top">
+                         <div class="mob-cross">
+                             <div class="mob-cross-line"></div>
+                             <div class="mob-cross-line"></div>
+                         </div>
+                     </div>
+                     <div class="feedback-modal__title">
+                         Оставьте свои<br>
+                         контакты<br>
+                         для связи
+                     </div>
+                     <div class="feedback-modal__form">
+                         <input class="input-text" type="text" name="name" placeholder="Вашу имя" autocomplete="off">
+                         <input class="input-text" type="text" name="phone" placeholder="+7 ( ___ ) ___ - __ - __" autocomplete="off">
+                         <input class="input-text" type="text" name="comment" placeholder="Комментарий" autocomplete="off">
+                     </div>
+                     <a href="#" class="primary-button">
+                         <div class="slide-up-in-view__container">
+                             <div class="primary-button__text slide-up-in-view duration-1">
+                                 <div class="primary-button__text-animation">отправить заявку</div>
+                             </div>
+                         </div>
+                         <div class="primary-button__circle-anchor">
+                             <div class="primary-button__circle-animation">
+                                 <div class="primary-button__circle"></div>
+                             </div>
+                         </div>
+                         <div class="slide-up-in-view__container">
+                             <div class="primary-button__arrow slide-up-in-view duration-1 ">
+                                 <svg class="icon-arrow-right" width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                     <path d="M14.4297 5.92969L20.4997 11.9997L14.4297 18.0697" stroke="#FFFEF8" stroke-width="1.5" stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round"></path>
+                                     <path d="M3.5 12H20.33" stroke="#FFFEF8" stroke-width="1.5" stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round"></path>
+                                 </svg>
+                             </div>
+                         </div>
+                     </a>
+
+                 </div>
+                 <div class="modal-content__bottom">
+                     <img src="../assets/images/modal.png" alt="">
+                 </div>
+             </div>
+         </div>
          <div data-anchor="custom-design" class="mb-8 white-header giga-white-header fade-in">
              <section class="main-view">
                  <div class="section-bg">
