--- a/src/pages/about.html
+++ b/src/pages/about.html
@@ -93,7 +93,7 @@
     </div>
 </div>
 <div id="container">
-    <div data-anchor="about-section" class="white-header giga-white-header mb-8">
+    <div data-anchor="about-section" class="white-header s-mb-4 giga-white-header mb-8">
         <section class="about-section">
             <div class="about-section__container">
                 <div class="about-section__bg">
@@ -137,6 +137,10 @@
                 </div>
             </div>
         </section>
+    </div>
+    <div class="breadcrumbs slide-up-in-view">
+        <a href="#">Главная</a> /
+        <span>about</span>
     </div>
     <div class="mb-8" data-anchor="about-advantages">
         <section class="about-advantages">
