--- a/src/pages/prices.html
+++ b/src/pages/prices.html
@@ -93,7 +93,7 @@
     </div>
 </div>
 <div id="container">
-    <section class="prices giga-white-header mb-8">
+    <section class="prices giga-white-header s-mb-4 mb-8">
         <div class="prices__content">
             <div class="prices__button-anchor">
                 <div class="main-view__button-text-wrapper">
@@ -132,6 +132,10 @@
             <img src="../assets/images/prices.png" alt="">
         </div>
     </section>
+    <div class="breadcrumbs slide-up-in-view">
+        <a href="#">Главная</a> /
+        <span>Цены</span>
+    </div>
     <div animation-mob-steps="3" animation-step="0" class="animation-state-0" data-anchor="prices-design">
         <section class="prices-design">
             <div class="prices-design__scroll">
