--- a/src/pages/project.html
+++ b/src/pages/project.html
@@ -93,7 +93,7 @@
     </div>
 </div>
 <div id="container">
-    <div data-anchor="project" class="white-header giga-white-header mb-8">
+    <div data-anchor="project" class="white-header s-mb-4 giga-white-header mb-8">
         <section class="project">
             <div class="project__container">
                 <div class="project__content">
@@ -145,6 +145,11 @@
                 </div>
             </div>
         </section>
+    </div>
+    <div class="breadcrumbs slide-up-in-view">
+        <a href="#">Главная</a> /
+        <a href="#">Проекты</a> /
+        <span>White Khamovniki</span>
     </div>
     <div data-anchor="project-details">
         <section class="project-details">
