--- a/src/pages/projects.html
+++ b/src/pages/projects.html
@@ -147,6 +147,10 @@
                     </div>
                 </div>
             </div>
+            <div class="breadcrumbs slide-up-in-view">
+                <a href="#">Главная</a> /
+                <span>Проекты</span>
+            </div>
             <div class="projects-gallery">
                 <div class="projects-gallery__item scale-into-view">
                     <div class="projects-swiper-slide__content">
