--- a/src/pages/service-architecture.html
+++ b/src/pages/service-architecture.html
@@ -93,7 +93,7 @@
     </div>
 </div>
 <div id="container">
-    <div data-anchor="architecture-main" class="white-header giga-white-header">
+    <div data-anchor="architecture-main" class="white-header s-mb-4 giga-white-header">
         <section class="architecture-main">
             <div class="architecture-main__bg">
                 <div class="architecture-main__bg-animation">
@@ -153,6 +153,11 @@
                 </div>
             </div>
         </section>
+    </div>
+    <div class="breadcrumbs slide-up-in-view">
+        <a href="#">Главная</a> /
+        <a href="#">Услуги</a> /
+        <span>Архитектурный проект</span>
     </div>
     <div data-anchor="services-desc">
         <section class="services-desc architecture">
