--- a/src/pages/service-complectation.html
+++ b/src/pages/service-complectation.html
@@ -92,7 +92,7 @@
     </div>
 </div>
 <div id="container">
-    <div data-anchor="complectation" class="white-header giga-white-header mb-8">
+    <div data-anchor="complectation" class="white-header s-mb-4 giga-white-header mb-8">
         <section class="complectation">
             <div class="complectation__bg">
                 <div class="complectation__bg-animation">
@@ -148,6 +148,11 @@
                 </div>
             </div>
         </section>
+    </div>
+    <div class="breadcrumbs slide-up-in-view">
+        <a href="#">Главная</a> /
+        <a href="#">Услуги</a> /
+        <span>Комплектация</span>
     </div>
     <div class="mb-8" data-anchor="design-steps">
         <section class="design-steps compl">
