--- a/src/pages/service-design.html
+++ b/src/pages/service-design.html
@@ -93,7 +93,7 @@
     </div>
 </div>
 <div id="container">
-    <div data-anchor="design-main" class="white-header giga-white-header mb-8">
+    <div data-anchor="design-main" class="white-header s-mb-4 giga-white-header mb-8">
         <section class="design-main">
             <div class="design-main__bg">
                 <div class="design-main__bg-animation">
@@ -171,6 +171,11 @@
                 </div>
             </div>
         </section>
+    </div>
+    <div class="breadcrumbs slide-up-in-view">
+        <a href="#">Главная</a> /
+        <a href="#">Услуги</a> /
+        <span>Дизайн</span>
     </div>
     <div data-anchor="design-steps">
         <section class="design-steps">
