--- a/src/pages/services.html
+++ b/src/pages/services.html
@@ -126,6 +126,10 @@
                                 </div>
                             </div>
                         </div>
+                        <div class="breadcrumbs slide-up-in-view">
+                            <a href="#">Главная</a> /
+                            <span>Услуги</span>
+                        </div>
                         <div class="services-section__row row1">
                             <div class="services-section__row-animation">
                                 <div class="services-section__item-wrap">
