--- a/src/index.html
+++ b/src/index.html
@@ -34,6 +34,7 @@
             <div><a href="pages/service-architecture.html">Архитектура/услуга</a></div>
             <div><a href="pages/service-complectation.html">Комплектация/услуга</a></div>
             <div><a href="pages/service-vision.html">Надзор/услуга</a></div>
+            <div><a href="pages/page404.html">404</a></div>
         </div>
     </div>
 </body>
